DT-1640 fix to input border radius on iOS

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -649,7 +649,6 @@ textarea,
 	background-color: @color-swatch1;
 
 	// Fix for iOS devices
-    -webkit-appearance: none;
     -webkit-border-radius: 0;
 	&:hover, &:focus {
 		border: 1px solid darken(@borders-blocks, 20%);
